--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h2 class="heading-secondary">Exploring That Make U Hit</h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">
+          <div class="col-1-of-1">
             <h3 class="heading-tertiary  u-margin">go to nature luv</h3>
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
@@ -49,9 +49,14 @@
               perspiciatis debitis sed earum!
             </p>
           </div>
-          <div class="col-1-of-2">text 2</div>
+          <div class="col-1-of-2">
+            <img src="./img/nat-1.jpg" alt="" class="show-images">
+            <img src="./img/nat-2.jpg" alt="" class="show-images">
+            <img src="./img/nat-3.jpg" alt="" class="show-images">
+          </div>
         </div>
       </section>
     </main>
+    <script src="./javascript/index.js"></script>
   </body>
 </html>
